--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
             - Author
             </blockquote> -->
          <hr>
-         <aside>Page under construction</aside>
          <section>
             <p>An experienced software engineer with expertise in technical management and linked data.</p>
             <p>Working at <a href="https://eccenca.com">eccenca GmbH</a> as a Software Developer.</p>
@@ -116,15 +115,17 @@
          <section>
             <p>Find me on:</p>
             <ul>
-               <li><a href="https://www.linkedin.com/in/rubennavarropiris/">linkedin</a> </li>
-               <li><a href="https://github.com/rnavarropiris/">github</a></li>
-               <li><a href="https://keybase.io/rubennavarro">keybase</a></li>
+               <li><a href="https://www.researchgate.net/profile/Ruben_Navarro_Piris">ResearchGate</a> </li>
+               <li><a href="https://www.linkedin.com/in/rubennavarropiris/">LinkedIn</a> </li>
+               <li><a href="https://github.com/rnavarropiris/">GitHub</a></li>
+               <li><a href="https://keybase.io/rubennavarro">Keybase</a></li>
             </ul>
          </section>
+         <aside>Page under construction, stay tuned!</aside>
          <footer>
             <p>
                <small>
-               Hosted on Gitlab Pages &ndash; Inspired by <a href="http://milligram.io/">milligram</a>
+               Hosted on GitHub &ndash; Inspired by <a href="http://milligram.io/">milligram</a>
                </small>
             </p>
          </footer>
