modify font sizes (mobile & desktop)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             height: 100vh;
          }
          html {
-            font-size: 80%;
+            font-size: 65%;
          }
          body {
             font-size: 1.6em;
@@ -91,6 +91,9 @@
               margin: 0 auto;
               padding-top: 5rem;
            }
+            html {
+              font-size: 100%;
+            }
             h1 {
                font-size: 3.5rem;
             }
