Add schema:url property to comply with Google's Structured Data guidelines

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
          <div class="title">
             <h1 property="name">Ruben Navarro</h1>
             <h2 property="jobTitle">Software Engineer</h2>
+            <meta property="url" content="https://rnavarropiris.github.io">
          </div>
          <div>
             <img property="image" src="./assets/profile.jpeg"/>
