Switch from RDFa to Microdata

--- a/index.html
+++ b/index.html
@@ -105,16 +105,16 @@
       </style>
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
    </head>
-   <body vocab="http://schema.org/" resource="https://rnavarropiris.github.io" typeof="Person">
+   <body itemscope itemtype="http://schema.org/Person">
       <div class="wrapper">
       <header>
          <div class="title">
-            <h1 property="name">Ruben Navarro</h1>
-            <h2 property="jobTitle">Software Engineer</h2>
-            <meta property="url" content="https://rnavarropiris.github.io">
+            <h1 itemprop="name">Ruben Navarro</h1>
+            <h2 itemprop="jobTitle">Software Engineer</h2>
+            <meta itemprop="url" content="https://rnavarropiris.github.io">
          </div>
          <div>
-            <img property="image" src="./assets/profile.jpeg"/>
+            <img itemprop="image" src="./assets/profile.jpeg"/>
          </div>
       </header>
          <!-- <ul>
@@ -124,17 +124,17 @@
             - Author
             </blockquote> -->
          <hr>
-         <section property="description">
+         <section itemprop="description">
             <p>An experienced software engineer with expertise in technical management and linked data.</p>
             <p>Working at <a href="https://eccenca.com">eccenca GmbH</a> as a Software Developer.</p>
          </section>
          <section>
             <p>Find me on:</p>
             <ul>
-               <li><a href="https://www.researchgate.net/profile/Ruben_Navarro_Piris" target="_blank" property="sameAs">ResearchGate</a> </li>
-               <li><a href="https://www.linkedin.com/in/rubennavarropiris/" target="_blank" property="sameAs">LinkedIn</a> </li>
-               <li><a href="https://github.com/rnavarropiris/" target="_blank" property="sameAs">GitHub</a></li>
-               <li><a href="https://keybase.io/rubennavarro" target="_blank" property="sameAs">Keybase</a></li>
+               <li><a href="https://www.researchgate.net/profile/Ruben_Navarro_Piris" target="_blank" itemprop="sameAs">ResearchGate</a> </li>
+               <li><a href="https://www.linkedin.com/in/rubennavarropiris/" target="_blank" itemprop="sameAs">LinkedIn</a> </li>
+               <li><a href="https://github.com/rnavarropiris/" target="_blank" itemprop="sameAs">GitHub</a></li>
+               <li><a href="https://keybase.io/rubennavarro" target="_blank" itemprop="sameAs">Keybase</a></li>
             </ul>
          </section>
          <aside>Page under construction, stay tuned!</aside>
