Add 'worksFor' property

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
          <hr>
          <section itemprop="description">
             <p>An experienced software engineer with expertise in technical management and linked data.</p>
-            <p>Working at <a href="https://eccenca.com">eccenca GmbH</a> as a Software Developer.</p>
+            <p>Working at <a itemprop="worksFor" href="https://eccenca.com">eccenca GmbH</a> as a Software Developer.</p>
          </section>
          <section>
             <p>Find me on:</p>
