full name, minor sizing improvements

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="chrome=1">
-      <title>Ruben Navarro</title>
       <meta name="google-site-verification" content="iEhlxqR6lLBu6xTkZ9uBILJnnO499ldE7o7kjnw3wHw" />
+      <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
       <style>
          * {
             -webkit-margin-before: 0;
@@ -36,7 +36,7 @@
             max-width: 15rem;
          }
          h1 {
-            font-size: 3.0rem;
+            font-size: 2.25rem;
          }
          h2 {
             font-size: 1.5rem;
@@ -96,20 +96,25 @@
               font-size: 100%;
             }
             h1 {
-               font-size: 3.5rem;
+               font-size: 2.5rem;
             }
             h2 {
-               font-size: 2.0rem;
+               font-size: 1.5rem;
             }
          }
+         @media (min-width: 75rem) {
+           .wrapper {
+              max-width: 55rem;
+           }
+         }
       </style>
-      <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+      <title>Ruben Navarro Piris</title>
    </head>
    <body itemscope itemtype="http://schema.org/Person">
       <div class="wrapper">
       <header>
          <div class="title">
-            <h1 itemprop="name">Ruben Navarro</h1>
+            <h1 itemprop="name">Ruben Navarro Piris</h1>
             <h2 itemprop="jobTitle">Software Engineer</h2>
             <meta itemprop="url" content="https://rnavarropiris.github.io">
          </div>
