extend sameAs, add knowsLanguage

--- a/index.html
+++ b/index.html
@@ -110,13 +110,17 @@
     </style>
     <title>Ruben Navarro Piris</title>
   </head>
-  <body itemscope itemtype="http://schema.org/Person">
+  <body itemscope itemtype="http://schema.org/Person"> 
+   <meta itemprop="url" content="https://rnavarropiris.github.io">
+   <meta itemprop="knowsLanguage" content="es">
+   <meta itemprop="knowsLanguage" content="cat">
+   <meta itemprop="knowsLanguage" content="en">
+   <meta itemprop="knowsLanguage" content="de">
     <div class="wrapper">
       <header>
         <div class="title">
           <h1 itemprop="name">Ruben Navarro Piris</h1>
           <h2 itemprop="jobTitle">Software Engineer</h2>
-          <meta itemprop="url" content="https://rnavarropiris.github.io">
         </div>
         <div>
           <img itemprop="image" src="./assets/profile.jpeg"/>
@@ -137,9 +141,10 @@
         <p>Find me on:</p>
         <ul>
           <li><a href="https://www.researchgate.net/profile/Ruben_Navarro_Piris" target="_blank" itemprop="sameAs">ResearchGate</a> </li>
-          <li><a href="https://www.linkedin.com/in/rubennavarropiris/" target="_blank" itemprop="sameAs">LinkedIn</a> </li>
           <li><a href="https://github.com/rnavarropiris/" target="_blank" itemprop="sameAs">GitHub</a></li>
           <li><a href="https://keybase.io/rubennavarro" target="_blank" itemprop="sameAs">Keybase</a></li>
+          <li><a href="https://www.linkedin.com/in/rubennavarropiris/" target="_blank" itemprop="sameAs">LinkedIn</a> </li>
+          <li><a href="https://www.xing.com/profile/Ruben_NavarroPiris" target="_blank" itemprop="sameAs">Xing</a></li>
         </ul>
       </section>
       <aside>Page under construction, stay tuned!</aside>
