update job position, add DataPlatform (CMEM) link

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <header>
         <div class="title">
           <h1 itemprop="name">Ruben Navarro Piris</h1>
-          <h2 itemprop="jobTitle">Software Engineer</h2>
+          <h2 itemprop="jobTitle">Senior Software Engineer</h2>
         </div>
         <div>
           <img itemprop="image" src="./assets/profile.jpeg"/>
@@ -134,8 +134,8 @@
         </blockquote> -->
       <hr>
       <section itemprop="description">
-        <p>An experienced software engineer with expertise in technical management and linked data.</p>
-        <p>Working at <a itemprop="worksFor" href="https://eccenca.com">eccenca GmbH</a> as a Software Developer.</p>
+        <p>An experienced software engineer with technical management and linked data expertise.</p>
+        <p>Working at <a itemprop="worksFor" href="https://eccenca.com" target="_blank">eccenca GmbH</a> as a Senior Software Developer and Technical <a href="https://www.eccenca.com/en/products/eccenca-corporate-memory.html" target="_blank">DataPlatform</a> Lead.</p>
       </section>
       <section>
         <p>Find me on:</p>
