Update working place

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <hr>
       <section itemprop="description">
         <p>An experienced software engineer with technical management and linked data expertise.</p>
-        <p>Working at <a itemprop="worksFor" href="https://eccenca.com" target="_blank">eccenca GmbH</a> as a Senior Software Developer and Technical <a href="https://www.eccenca.com/en/products/eccenca-corporate-memory.html" target="_blank">DataPlatform</a> Lead.</p>
+        <p>Working at <a itemprop="worksFor" href="https://www.webfleet.com/" target="_blank">Webfleet Solutions GmbH</a> as a Senior Software Engineer.</p>
       </section>
       <section>
         <p>Find me on:</p>
